--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -19,4 +19,23 @@ ul li{
     font-size: 20px;
 }
 
-
+#link2{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+#link3{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+#link4{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+#link5{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
