--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -5,37 +5,31 @@ nav{
 }
 
 ul li{
+    background-color: #348990;
     margin-top: 0px;
+    color: white;
     padding: 35px 35px 35px 35px;
     border: none;
     display: inline-block;
+    list-style-type: none;
     text-align: center;
     width: 150px;
+    text-decoration: none;
 }
 
-#link{
+nav ul li a{
     text-decoration: none;
     color: white;
     font-size: 20px;
 }
 
-#link2{
+nav ul li ul{
+    display: block;
+    position: absolute;
     text-decoration: none;
     color: white;
     font-size: 20px;
+    background-color: #348990;
 }
-#link3{
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-}
-#link4{
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-}
-#link5{
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-}
+
+
