--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -39,15 +39,17 @@ nav a:active{
     background-color: rgb(32, 74, 84);
 }
 
-nav ul>li ul {
+nav ul li ul {
     position: absolute;
     top: 0;
     margin-left: 100%;
     display: block;
 }
-nav ul ul li {
-    float:none;
+
+nav ul li ul a{
+    padding: 30px 30px 30px 30px;
 }
+
 nav>ul>li:hover>ul{
     display: block;
 }
