--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,7 +1,12 @@
 nav{
+    position: absolute;
     top: 0;
+    left: 0;
+    right: 0%;
+    width: 100%;
     background-color: #348990;
-    border: 1px solid white;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
 }
 
 nav ul{
