--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -10,6 +10,9 @@ body{
         font-size: 1.2em;
         line-height: 1.4;
     }
+    img{
+        height: 240px;
+    }
 }
 header{
     text-align: center;
