--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -12,7 +12,7 @@ header{
 h1{
     color:black;
     text-align: center;
-    margin-top: 3em;
+    margin-top: 0.5em;
 }
 h3{
     font-style: italic;
@@ -38,19 +38,25 @@ main{
 p{
     text-align: left;
 }
-a{
-    color: blue;
-}
+
 .credentials{
     text-align: center;
 }
 .reflections{
     text-align: left;
 }
+footer{
+    margin-top: auto 0;
+    text-align: center;
+    left: 0;
+    right: 0%;
+    bottom: 0;
+}
 @media (min-width: 550px) {
     p{
-        font-size: 1.2em;
+        font-size: 1.0em;
         line-height: 1.4;
+        color: black;
     }
     img{
         height: 240px;
@@ -61,19 +67,32 @@ a{
     h3{
         color: black;
     }
+    
 }
-footer{
-    margin-top: auto 0;
-    text-align: center;
-    color: white;
-    left: 0;
-    right: 0%;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(77, 74, 74);
-    height: 5em;
-    border: 1px solid white;
-}
-footer a{
-    color: white;
+@media print {
+    body{
+        margin: 1in;
+        page-break-after: avoid;
+        zoom: 60%;
+    }
+    ul{
+        color: black;
+    }
+    p{
+        color: black;
+    }
+    h1{
+        color: black;
+    }
+    blockquote{
+        color: black;
+        font-family: 'Roboto', sans-serif;
+    }
+    footer{
+        color: black;
+    }
+    footer a, .credentials a{
+        color: black !important;
+        text-decoration: underline;
+    }
 }
