--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -24,6 +24,7 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
 #indent1, #indent2, #indent3{
     text-indent: 3cm;
 }
@@ -31,7 +32,6 @@ img {
     font-size: 220%;
     font-style: italic;
 }
-
 main{
     text-align: center;
 }
@@ -53,8 +53,23 @@ footer{
     left: 0;
     right: 0%;
     bottom: 0;
+    border: 1px solid black;
+    background-image: url(images/footer_background.jpeg);
+    background-size: 100%;
+
 }
-@media (min-width: 550px) {
+.phone{
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
+.mail{
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+}
+
+@media (max-width: 500px) {
     p{
         font-size: 1.0em;
         line-height: 1.4;
@@ -69,7 +84,7 @@ footer{
     h3{
         color: black;
     }
-    
+
 }
 @media print {
     body{
