--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -56,7 +56,7 @@ footer{
     border: 1px solid black;
     background-image: url(images/footer_background.jpeg);
     background-size: 100%;
-
+    display: inline-block;
 }
 .phone{
     width: 20px;
