--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -62,13 +62,20 @@ footer{
     width: 20px;
     height: 20px;
     display: inline-block;
+    transition: transform .2s;
 }
 .mail{
     width: 25px;
     height: 25px;
     display: inline-block;
+    transition: transform .2s;
 }
-
+.phone:hover{
+    transform: scale(1.5);
+}
+.mail:hover{
+    transform: scale(1.5);
+}
 @media (max-width: 500px) {
     p{
         font-size: 1.0em;
