--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -41,6 +41,11 @@ p{
 a{
     color: blue;
 }
+iframe{
+    width:"640px";
+    height:"480px";
+    border: 0.2px solid black;
+}
 .credentials{
     text-align: center;
 }
