--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -101,7 +101,34 @@ footer{
 }
 .mail:hover{
     transform: scale(1.5);
+} 
+table{
+    border-collapse: collapse;
+    background-color: antiquewhite;
+    width: 500px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
+th{
+    border: 2px solid black;
+    font-weight: bold;
+    text-align: left;
+    color: white;
+    background-color: rgb(139, 105, 11) !important;
+}
+td{
+    border: 2px solid black;
+}
+tbody{
+    align-self: center;
+}
+caption{
+    text-align: center;
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
+  }
 @media (max-width: 500px) {
     p{
         font-size: 1.0em;
@@ -123,6 +150,25 @@ footer{
     }
     #contacts{
         text-align: center;
+    }
+    table{
+        border: 2px solid black;
+        align-self: center;
+        width: 500px;
+        font-family: arial, sans-serif;
+    }
+    figcaption{
+        text-align: center;
+    }
+    td{
+        border: 2px solid black;
+    }
+    th{
+        border: 2px solid black;
+        font-weight: bold;
+        text-align: left;
+        color: white;
+        background-color: rgb(139, 105, 11) !important;
     }
 }
 @media print {
