--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -152,16 +152,12 @@ tr:nth-child(even) {
         text-align: center;
     }
     table{
-        border: 2px solid black;
-        align-self: center;
+        border-collapse: collapse;
+        background-color: antiquewhite;
         width: 500px;
-        font-family: arial, sans-serif;
-    }
-    figcaption{
         text-align: center;
-    }
-    td{
-        border: 2px solid black;
+        margin-left: auto;
+        margin-right: auto;
     }
     th{
         border: 2px solid black;
@@ -170,6 +166,18 @@ tr:nth-child(even) {
         color: white;
         background-color: rgb(139, 105, 11) !important;
     }
+    td{
+        border: 2px solid black;
+    }
+    tbody{
+        align-self: center;
+    }
+    caption{
+        text-align: center;
+    }
+    tr:nth-child(even) {
+        background-color: #dddddd;
+      }
 }
 @media print {
     body{
