--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -6,6 +6,28 @@ body{
     flex-direction: column;
 }
 
+.website-counter {
+    background-color: #123738;
+    height: 50px;
+    width: 80px;
+    color: white;
+    border-radius: 30px;
+    font-weight: 700;
+    font-size: 25px;
+    margin-top: 10px;
+  }
+  
+  /* Styles for reset button */
+  #reset {
+    margin-top: 20px;
+    background-color: #008cba;
+    cursor: pointer;
+    font-size: 18px;
+    padding: 8px 20px;
+    color: white;
+    border: 0;
+  }
+
 header{
     text-align: center;
 }
@@ -64,6 +86,10 @@ iframe{
     height:"480px";
     border: 0.2px solid black;
 }
+.PS_project{
+    display: block;
+}
+
 #contacts{
     text-align: center;
 }
